[project]
name = "json-keyword-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==25.1.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "huggingface-hub==0.32.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "sentence-transformers==4.1.0",
    "setuptools==80.9.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "typing-extensions==4.14.0",
    "urllib3==2.4.0",
]
